fix the img position in single page

--- a/source/css/_partial/article.styl
+++ b/source/css/_partial/article.styl
@@ -475,6 +475,7 @@ a.article-title
     display: block
     max-width: 100%
     margin: 0 auto
+    margin: 0 auto
 
 .article-toc
   display: none
