Fix the case box size

--- a/source/css/_partial/article.styl
+++ b/source/css/_partial/article.styl
@@ -100,6 +100,7 @@ a.article-title
   @extend $base-style
   clearfix()
   max-height: 108px
+  min-height: 108px
   color: color-default
   padding: 0
   p, table
