--- a/layout/_partial/head.ejs
+++ b/layout/_partial/head.ejs
@@ -26,7 +26,7 @@
     <link rel="alternative" href="<%- theme.rss %>" title="<%= config.title %>" type="application/atom+xml">
   <% } %>
   <% if (theme.favicon){ %>
-    <link rel="icon" href="<%- theme.favicon %>">
+    <link rel="shortcut icon" href="<%- theme.favicon %>" type="image/ico">
   <% } %>
   <link href="<%- url_for(config.root + 'webfonts/ptserif/main.css') %>" rel='stylesheet' type='text/css'>
   <link href="<%- url_for(config.root + 'webfonts/source-code-pro/main.css') %>" rel="stylesheet" type="text/css">
