--- a/source/css/_partial/article.styl
+++ b/source/css/_partial/article.styl
@@ -208,6 +208,7 @@ a.article-title
   ul, ol, dl
     margin-top: line-height
     margin-bottom: line-height
+    color: #5F5F5F
   img, video
     max-width: 100%
     height: auto
