--- a/source/css/_partial/article.styl
+++ b/source/css/_partial/article.styl
@@ -454,6 +454,7 @@ a.article-title
   display: none
   width: 900px
   height: 235px
+  align: center
   &:first-child
     display: block
   &.loaded
@@ -466,6 +467,7 @@ a.article-title
 
 .article-gallery-img-pages
   margin: 0 auto
+  align: center
   display: none
   margin-bottom: 40px
   &:first-child
@@ -475,9 +477,14 @@ a.article-title
     display: block
   img
     display: block
-    max-width: 100%
+    width: 100%
+    height: 100%
+    overflow:hidden
     margin: 0 auto
-    margin: 0 auto
+
+    
+
+
 
 .article-toc
   display: none
