fix the case pic position

--- a/source/css/_partial/article.styl
+++ b/source/css/_partial/article.styl
@@ -6,6 +6,8 @@
   overflow: hidden
   margin-right: 20px
   padding-bottom: 11px
+  max-height: 418px
+  min-height: 418px
   //article box area shadow
   border: 1px solid color-border
   background: #fff
@@ -452,8 +454,9 @@ a.article-title
 .article-gallery-img
   margin: 0 auto
   display: none
-  width: 900px
-  height: 235px
+  width: auto
+  height: auto
+  max-height: 235px
   align: center
   &:first-child
     display: block
