--- a/source/css/_partial/article.styl
+++ b/source/css/_partial/article.styl
@@ -212,9 +212,9 @@ a.article-title
     margin-bottom: line-height
     color: #5F5F5F
   img, video
-    max-width: 100%
-    height: auto
-    display: block
+    width: 100%
+    height: 100%
+    max-height: auto
     margin: auto
   iframe
     border: none
