--- a/source/css/_partial/article.styl
+++ b/source/css/_partial/article.styl
@@ -48,7 +48,7 @@ div.article-inner:hover
 
 .article-date-page
   color: color-grey
-  padding: 0 0px 0px 150px
+  padding: 0px 0px 0px 150px
   @media mq-mobile
     padding: 0 0px 0 20px
 
