--- a/source/css/_partial/comment.styl
+++ b/source/css/_partial/comment.styl
@@ -1,4 +1,8 @@
 #comments
+  width: 100%
+  padding: 40px 150px 0 150px
+  @media mq-mobile
+    padding: 40px 20px 0 20px
   margin: block-margin 0
   a
     @extend $link
