change the font color

--- a/source/css/_partial/article.styl
+++ b/source/css/_partial/article.styl
@@ -115,7 +115,7 @@ a.article-title
     line-height: line-height
     margin: 0.7em 0
     padding: 0px 10px 0 10px
-    color: #5F5F5F
+    color: #505050
     font-size: 14px;
     line-height: 1.72
   h1, h2, h3, h4, h5, h6
@@ -199,7 +199,7 @@ a.article-title
   p, table
     line-height: line-height
     margin: 0.7em 0
-    color: #5F5F5F
+    color: #505050
     line-height: 1.72
   h1, h2, h3, h4, h5, h6
     font-weight: 600
