--- a/layout/_partial/article.ejs
+++ b/layout/_partial/article.ejs
@@ -1,4 +1,4 @@
-<article id="<%= post.layout %>-<%= post.slug %>" class="article article-type-<%= post.layout %> + post-box pure-u-1 pure-u-sm-1-2 pure-u-md-2-3 <%= post.size %>" itemscope itemprop="blogPost">
+<article id="<%= post.layout %>-<%= post.slug %>" class="article article-type-<%= post.layout %> + post-box pure-u-1 pure-u-md-2-3 <%= post.size %>" itemscope itemprop="blogPost">
     <div class="article-inner"> 
       <%- partial('post/gallery') %>
         <% if (post.link || post.title){ %>
