english color tag setting now surpport

--- a/source/css/_partial/article.styl
+++ b/source/css/_partial/article.styl
@@ -358,7 +358,35 @@ a.article-title
   line-height: 1em
   display: inline-block
 
+.article-tag-list-link-works
+  width: auto
+  font-size: 0.75em
+  color: #fff
+  text-decoration: none
+  background-color: #FF6363
+  margin: 1px 1px 0px 8px
+  padding: 1.5px 3px 1.5px 3px
+  border-radius: 4px
+  border-bottom: none
+  text-align: center
+  line-height: 1em
+  display: inline-block
+
 .article-tag-list-link-rizhi
+  width: auto
+  font-size: 0.75em
+  color: #fff
+  text-decoration: none
+  background-color: #5DF1C0
+  margin: 1px 1px 0px 8px
+  padding: 1.5px 3px 1.5px 3px
+  border-radius: 4px
+  border-bottom: none
+  text-align: center
+  line-height: 1em
+  display: inline-block
+
+.article-tag-list-link-log
   width: auto
   font-size: 0.75em
   color: #fff
@@ -386,7 +414,36 @@ a.article-title
   line-height: 1em
   display: inline-block
 
+.article-tag-list-link-share
+  width: auto
+  font-size: 0.75em
+  color: #fff
+  text-decoration: none
+  background-color: #E8B055
+  margin: 1px 1px 0px 8px
+  padding: 1.5px 3px 1.5px 3px
+  border-radius: 4px
+  border-bottom: none
+  text-align: center
+  line-height: 1em
+  display: inline-block
+
 .article-tag-list-link-wenzhang
+  width: auto
+  height: auto
+  font-size: 0.75em
+  color: #fff
+  text-decoration: none
+  background-color: #FF8643
+  margin: 1px 1px 0px 8px
+  padding: 1.5px 3px 1.5px 3px
+  border-radius: 4px
+  border-bottom: none
+  text-align: center
+  line-height: 1em
+  display: inline-block
+
+.article-tag-list-link-article
   width: auto
   height: auto
   font-size: 0.75em
