some little fix

--- a/source/css/_partial/article.styl
+++ b/source/css/_partial/article.styl
@@ -9,10 +9,10 @@
   max-height: 418px
   min-height: 418px
   //article box area shadow
-  border: 1px solid color-border
   background: #fff
   -webkit-box-shadow: 0 1px 4px 0 rgba(0,0,0,0.14)
-  -webkit-border-radius: 2px
+  -webkit-border-radius: 2px;
+  border-radius: 2px;
   box-shadow: 0 1px 4px 0 rgba(0,0,0,0.14)
   z-index: 1
   transition: -webkit-box-shadow .4s ease-in-out, box-shadow .25s .25s ease-in-out
@@ -502,7 +502,7 @@ a.article-title
   margin-top: 0.5em
 
 .article-gallery
-  background: #fff
+  background: #fbfbfb
   position: relative
 
 .article-gallery-photos
