--- a/source/css/_variables.styl
+++ b/source/css/_variables.styl
@@ -6,7 +6,7 @@ vendor-prefixes = webkit moz ms official
 color-default = #111
 color-grey = #939393
 color-border = #ddd
-color-background = white
+color-background = #fbfbfb
 
 // Fonts
 font-default = 'PT Serif', 'STZhongsong', '华文中宋', 'Microsoft Yahei', serif
