fix the <h> element showing way in homepage cases

--- a/source/css/_partial/article.styl
+++ b/source/css/_partial/article.styl
@@ -116,12 +116,13 @@ a.article-title
     line-height: line-height
     margin: 0.7em 0
     padding: 0px 10px 0 10px
-    color: #505050
-    font-size: 14px;
+    color: rgba(0,0,0,.8)
+    font-size: 15px;
     line-height: 1.72
   h1, h2, h3, h4, h5, h6
     font-weight: 600
     line-height: 1.5em
+    padding: 0px 10px 0 10px
     margin: line-height-title 0
   a
     @extend $link-highlight
@@ -200,10 +201,10 @@ a.article-title
   p, table
     line-height: line-height
     margin: 0.7em 0
-    color: #505050
+    color: rgba(0,0,0,.8)
     line-height: 1.72
   h1, h2, h3, h4, h5, h6
-    font-weight: 600
+    font-weight: bold
     line-height: 1.5em
     margin: line-height-title 0
   a
