--- a/source/css/_partial/article.styl
+++ b/source/css/_partial/article.styl
@@ -10,19 +10,20 @@
   min-height: 418px
   //article box area shadow
   background: #fff
-  -webkit-box-shadow: 0 1px 4px 0 rgba(0,0,0,0.14)
+  -webkit-box-shadow: 0 1px 4px 0 rgba(0,0,0,0.2)
   -webkit-border-radius: 2px;
   border-radius: 2px;
-  box-shadow: 0 1px 4px 0 rgba(0,0,0,0.14)
+  box-shadow: 0 1px 4px 0 rgba(0,0,0,0.2)
   z-index: 1
   transition: -webkit-box-shadow .4s ease-in-out, box-shadow .25s .25s ease-in-out
   @media mq-mobile
     width: auto
-    margin: 0 auto 15px auto
+    margin: 0px 10px 10px 10px
 
 div.article-inner:hover
   -webkit-box-shadow: 0 1px 15px 0 rgba(0,0,0,0.2)
   box-shadow: 0 1px 15px 0 rgba(0,0,0,0.2)
+  z-index: 1
 
 
 // this css is for the inner pages, the above one for the 
