--- a/source/css/_partial/article.styl
+++ b/source/css/_partial/article.styl
@@ -15,7 +15,7 @@
   border-radius: 2px;
   box-shadow: 0 1px 4px 0 rgba(0,0,0,0.2)
   z-index: 1
-  transition: -webkit-box-shadow .4s ease-in-out, box-shadow .25s .25s ease-in-out
+  transition: -webkit-box-shadow .25s .25s ease-in-out, box-shadow .25s .25s ease-in-out
   @media mq-mobile
     width: auto
     margin: 0px 10px 10px 10px
