--- a/source/css/_partial/header.styl
+++ b/source/css/_partial/header.styl
@@ -9,19 +9,21 @@
 #header-outer
   height: 100%
   position: relative
-  @media mq-mobile
-    border-bottom: 1px solid #FCFCFC;
-    -webkit-box-shadow: 0 1px 4px 0 rgba(0,0,0,0.14)
-    -webkit-border-radius: 2px
-    box-shadow: 0 1px 8px 0 rgba(0,0,0,0.20)
-    z-index: 100
+
 
 
 #header-inner
-  position: relative
+  position: absolute
   overflow: hidden
+  width: 100%
+  background: #FFFFFF
   @media mq-mobile
     margin-top: 0px
+    border-bottom: 1px solid #FCFCFC;
+    -webkit-box-shadow: 0 1px 4px 0 rgba(0,0,0,0.14)
+    box-shadow: 0 1px 8px 0 rgba(0,0,0,0.20)
+    z-index: 100
+    
    
 
 
