the update this morning is stupid,but it have been fixed

--- a/source/css/_partial/header.styl
+++ b/source/css/_partial/header.styl
@@ -13,11 +13,12 @@
 
 
 #header-inner
-  position: absolute
+  position: relative
   overflow: hidden
-  width: 100%
-  background: #FFFFFF
+  width: 100% 
   @media mq-mobile
+    position: absolute
+    background: #FFFFFF
     margin-top: 0px
     border-bottom: 1px solid #FCFCFC;
     -webkit-box-shadow: 0 1px 4px 0 rgba(0,0,0,0.14)
