--- a/source/css/_partial/article.styl
+++ b/source/css/_partial/article.styl
@@ -5,6 +5,7 @@
   position: relative
   overflow: hidden
   margin-right: 20px
+  margin-top: 10px
   padding-bottom: 11px
   max-height: 418px
   min-height: 418px
