--- a/source/css/_partial/article.styl
+++ b/source/css/_partial/article.styl
@@ -548,7 +548,7 @@ a.article-title
     margin: 0 auto
 
 .article-gallery-img-pages
-  margin: 0 auto
+  margin: 0px auto
   display: none
   margin-bottom: 40px
   &:first-child
@@ -559,18 +559,9 @@ a.article-title
     display: block
     width: 100%
     height: 100%
-    overflow:hidden
+    overflow: hidden
     margin: 0 auto
-    transition: -webkit-box-shadow .25s .25s ease-in-out, box-shadow .25s .25s ease-in-out
-
-a.article-gallery-img-pages:hover
-  -webkit-box-shadow: 0px 1px 15px 0 rgba(0,0,0,0.3)
-  box-shadow: 0px 1px 15px 0 rgba(0,0,0,0.3)
-  position: relative
-  z-index: 99
     
-
-
 
 .article-toc
   display: none
