our colorful gradient download tag has just release

--- a/source/css/_partial/article.styl
+++ b/source/css/_partial/article.styl
@@ -468,6 +468,26 @@ a.article-title
   line-height: 1em
   display: inline-block
 
+.article-tag-list-link-xiazai
+  width: auto
+  height: auto
+  font-size: 0.75em
+  color: #fff
+  text-decoration: none
+  background: -webkit-linear-gradient(to left, #fa6c9f, #ffe140); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to left, #fa6c9f, #ffe140);
+  -webkit-box-shadow: 0 5px 10px rgba(250,108,159,0.19), 0 3px 3px rgba(225,225,64,0.23);
+  -moz-box-shadow: 0 5px 10px rgba(250,108,159,0.19), 0 3px 3px rgba(250,108,159,0.19);
+  box-shadow: 0 5px 10px rgba(250,108,159,0.19), 0 3px 3px rgba(250,108,159,0.19);
+  border-radius: 2px;
+  margin: 1px 1px 0px 8px
+  padding: 1.5px 3px 1.5px 3px
+  border-radius: 4px
+  border-bottom: none
+  text-align: center
+  line-height: 1em
+  display: inline-block
+
 .article-tag-list-link-article
   width: auto
   height: auto
