some fix about the diffuse shadow

--- a/source/css/_partial/article.styl
+++ b/source/css/_partial/article.styl
@@ -478,7 +478,7 @@ a.article-title
   background: linear-gradient(to left, #fa6c9f, #ffe140);
   -webkit-box-shadow: 0 5px 10px rgba(250,108,159,0.19), 0 3px 3px rgba(225,225,64,0.23);
   -moz-box-shadow: 0 5px 10px rgba(250,108,159,0.19), 0 3px 3px rgba(250,108,159,0.19);
-  box-shadow: 0 5px 10px rgba(250,108,159,0.19), 0 3px 3px rgba(250,108,159,0.19);
+  box-shadow: 0px 5px 8px rgba(250,108,159,0.19), 0 3px 3px rgba(250,108,159,0.19);
   border-radius: 2px;
   margin: 1px 1px 0px 8px
   padding: 1.5px 3px 1.5px 3px
