font size change,nav and article

--- a/source/css/_partial/header.styl
+++ b/source/css/_partial/header.styl
@@ -50,7 +50,8 @@ $nav-link
 
 .main-nav-link
   @extend $nav-link
-  font-weight: 600
+  font-weight: 700
+  font-size: 18px;
   @media mq-mobile
     float: none
     padding: 0px 60px
