font-family change,we love big and claer and BW style,as simple as wireframe

--- a/source/css/_partial/header.styl
+++ b/source/css/_partial/header.styl
@@ -31,7 +31,7 @@
 #main-nav
   float: left
   margin-left: -15px
-  font-family: PT Serif,STZhongsong,'华文宋体','Microsoft Yahei',serif
+  font-family: PingFang SC,STZhongsong,'华文宋体','Microsoft Yahei',serif
 
 $nav-link
   float: left
@@ -50,8 +50,8 @@ $nav-link
 
 .main-nav-link
   @extend $nav-link
-  font-weight: 700
-  font-size: 18px;
+  font-weight: 400
+  font-size: 20px;
   @media mq-mobile
     float: none
     padding: 0px 60px
