--- a/source/css/_variables.styl
+++ b/source/css/_variables.styl
@@ -6,11 +6,11 @@ vendor-prefixes = webkit moz ms official
 color-default = #111
 color-grey = #939393
 color-border = #ddd
-color-background = #fbfbfb
+color-background = #ffffff
 
 // Fonts
-font-default = 'PT Serif', 'STZhongsong', '华文中宋', 'Microsoft Yahei', serif
-font-mono = "Source Code Pro", Consolas, Monaco, Menlo, Consolas, monospace, '华文中宋'
+font-default =  PingFang SC, 'STZhongsong', '华文中宋', 'Microsoft Yahei', serif
+font-mono =  PingFang SC, Consolas, Monaco, Menlo, Consolas, monospace, '华文中宋'
 font-icon = FontAwesome
 font-icon-path = "fonts/fontawesome-webfont"
 font-icon-version = "4.0.3"
