--- a/layout/_partial/article.ejs
+++ b/layout/_partial/article.ejs
@@ -39,9 +39,9 @@
     <% } %>
   </article>
 
-  <% if (!index && post.comments && config.disqus_shortname){ %>
+  <% if (!index && post.comments && config.duoshou_shortname){ %>
   <section id="comments">
-  <div id="disqus_thread">
+  <div id="ds-thread">
     <noscript>Please enable JavaScript to view the <a href="//disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
   </div>
   </section>
